--- a/styles/index.css
+++ b/styles/index.css
@@ -1,1 +1,163 @@
 /* index.css */
+body {}
+/* ---------------------------header */
+header {
+    position:fixed; right:0; top:0;
+    z-index:900; width:100%; height:70px;
+    padding:30px 250px;
+}
+header nav {display:flex; gap:32px; position:absolute; right:250px;}
+header nav a {font-weight:300; color:#DAE5E2;}
+/* ---------------------------home */
+#wrap {height:100vh;}
+#wrap #home {background-color:#2F5031;}
+#wrap #home h1 {
+    font-family:'Lexend',sans-serif; font-size:10.125rem; font-weight:900; color:#DAE5E2;
+    position:absolute; left:50%; top:50%; transform:translate(-50%, -50%);
+}
+#wrap #home img {
+    width:87px; height:auto; position:absolute; right:460px; bottom:435px; z-index:30;
+}
+#wrap #home .ani {
+    font-family:'Lexend',sans-serif; font-size:10.125rem; font-weight:900; color:#DAE5E2;
+    position:absolute; left:50%; top:50%; z-index:-1;
+    text-shadow:-1px 0px #DAE5E2, 0px 1px #DAE5E2, 1px 0px #DAE5E2, 0px -1px #DAE5E2;
+    color:#2F5031; animation:h1_ani 2s linear 1.5s both; 
+}
+#wrap #home p:first-child {
+    font-size:2rem; font-weight:900; color:#DAE5E2; text-align:right; width:596px;
+    position:relative; top:320px; left:0;
+}
+#wrap #home p:first-child::after {
+    content:''; width:100%; height:1px; background-color:#DAE5E2; display:block; position:relative; top:10px;
+    transform-origin:left center; animation:line_ani 2s linear both;
+}
+#wrap #home p:last-child {
+    font-family:'Lexend',sans-serif; font-size:2rem; font-weight:700; color:#DAE5E2;
+    width:552px; position:absolute; right:0; bottom:320px;
+}
+#wrap #home p:last-child::after {
+    content:''; width:100%; height:1px; background-color:#DAE5E2; display:block; position:relative; top:10px;
+    transform-origin:right center; animation:line_ani 2s linear both;
+}
+#wrap #home .job {color:#DAE5E2; border:1px solid #DAE5E2; border-radius:18px; display:inline-block; padding:10px 15px;}
+#wrap #home .job1 {position:absolute; right:609px; top:370px;}
+#wrap #home .job2 {position:absolute; right:468px; top:370px;}
+/* ---------------------------about me */
+#wrap #about_me {
+    background-color:#2F5031; padding:250px 250px 80px;
+    display:flex; justify-content:space-between;
+}
+#wrap #about_me h2 {color:#DAE5E2; width:391px; line-height:130%;}
+#wrap #about_me h2::after {background-color:#DAE5E2;}
+#wrap #about_me .about_me_left {
+    display:flex; flex-flow:column nowrap; justify-content:space-between; position:relative;
+}
+#wrap #about_me .about_me_left p {font-size:2.438rem; color:#DAE5E2;}
+#wrap #about_me .about_me_left p em {font-weight:700; color:#DAE5E2;}
+#wrap #about_me .about_me_left img {
+    width:86px; position:absolute; left:-80px; top:23px;}
+#wrap #about_me .about_me_left p em::after {
+    content:'';height:1px; display:inline-block; width:340px; background-color:#DAE5E2;
+    position:absolute; left: -60px; top:80px;
+}
+#wrap #about_me .about_me_left .profile {}
+#wrap #about_me .about_me_left .profile .name {}
+#wrap #about_me .about_me_left .profile .name em {font-size:1.375rem; font-weight:600; color:#fff; margin-right:10px;}
+#wrap #about_me .about_me_left .profile .name span {font-weight:100; color:#fff;}
+#wrap #about_me .about_me_left .profile p {font-weight:300; font-size:1rem; margin:15px 0;}
+#wrap #about_me .about_me_left .profile dl {}
+#wrap #about_me .about_me_left .profile dl dt {font-size:1.125rem; font-family:500;color:#fff;}
+#wrap #about_me .about_me_left .profile dl dd {font-weight:300;color:#fff;}
+#wrap #about_me .about_me_left .education {}
+#wrap #about_me .about_me_left .education dl {
+    display:flex; width:690px; flex-flow:row wrap; justify-content:space-between;}
+#wrap #about_me .about_me_left .education dl dt {
+    color:#fff;width:470px; font-size:1.125rem; margin-bottom:24px;}
+#wrap #about_me .about_me_left .education dl dd {color:rgba(255,255,255,0.5);width:140px;}
+#wrap #about_me .about_me_right {
+    display:flex; flex-flow:column nowrap; justify-content:space-between;
+}
+#wrap #about_me .about_me_right .skill {}
+#wrap #about_me .about_me_right .skill dl {
+    display:flex; width:520px; flex-flow:row wrap; justify-content:space-between;
+}
+#wrap #about_me .about_me_right .skill dl dt {
+    color:#fff; width:96px; font-size:1.125rem; margin-bottom:13px;}
+#wrap #about_me .about_me_right .skill dl dd {color:#fff; width:375px; font-weight:300;}
+#wrap #about_me .about_me_right .license {}
+#wrap #about_me .about_me_right .license dl {
+    display:flex; width:320px; flex-flow:row wrap; justify-content:space-between;
+}
+#wrap #about_me .about_me_right .license dl dt {
+    color:#fff; width:140px; font-size:1.125rem; margin-bottom:12px;
+}
+#wrap #about_me .about_me_right .license dl dd {color:rgba(255,255,255,0.5);width:140px;}
+#wrap #about_me h3 {
+    font-size:1.75rem; color:#DAE5E2; font-weight:600; font-family:'Lexend',sans-serif;
+    margin-bottom:15px;
+}
+/* ---------------------------web projects */
+#wrap #web_projects {padding:0 250px;}
+#wrap #web_projects .container {}
+#wrap #web_projects .container h2 {width:447px; color:#5D9360;}
+#wrap #web_projects .container h2::after {background-color:#5D9360;}
+#wrap #web_projects .container #project_swiper {}
+#wrap #web_projects .container #project_swiper .slide {}
+#wrap #web_projects .container #project_swiper .slide .left {}
+#wrap #web_projects .container #project_swiper .slide .left .thumnail {}
+#wrap #web_projects .container #project_swiper .slide .left .thumnail img {}
+#wrap #web_projects .container #project_swiper .slide .right {}
+#wrap #web_projects .container #project_swiper .slide .right .title {}
+#wrap #web_projects .container #project_swiper .slide .right .title h3 {}
+#wrap #web_projects .container #project_swiper .slide .right .title h3 p {}
+#wrap #web_projects .container #project_swiper .slide .right .program {}
+#wrap #web_projects .container #project_swiper .slide .right .program span {}
+#wrap #web_projects .container #project_swiper .slide .right .period {}
+#wrap #web_projects .container #project_swiper .slide .right .period .left {}
+#wrap #web_projects .container #project_swiper .slide .right .period .left p {}
+#wrap #web_projects .container #project_swiper .slide .right .period .right {}
+#wrap #web_projects .container #project_swiper .slide .right .period .right p {}
+#wrap #web_projects .container #project_swiper .slide .right .site {}
+#wrap #web_projects .container #project_swiper .slide .right .site a {}
+#wrap #web_projects .container #project_swiper .slide .right .site a img {}
+#wrap #web_projects .container .swiper_btn {}
+/* ---------------------------design */
+#wrap #design {padding:0 250px;}
+#wrap #design h2 {width:352px; color:#5D9360;}
+#wrap #design h2::after {background-color:#5D9360;}
+#wrap #design h2 .container {}
+#wrap #design h2 .container #bnr_swiper {}
+#wrap #design h2 .container #bnr_swiper .bnr_swiper_wrapper {}
+#wrap #design h2 .container #bnr_swiper .bnr_swiper_wrapper .slide {}
+#wrap #design h2 .container #bnr_swiper .bnr_swiper_wrapper .slide img {}
+#wrap #design h2 .container #small_swiper {}
+#wrap #design h2 .container #small_swiper .bnr_swiper_wrapper {}
+#wrap #design h2 .container #small_swiper .bnr_swiper_wrapper .slide {}
+#wrap #design h2 .container #small_swiper .bnr_swiper_wrapper .slide img {}
+#wrap #design h2 .container #detail_swiper {}
+#wrap #design h2 .container #detail_swiper .bnr_swiper_wrapper {}
+#wrap #design h2 .container #detail_swiper .bnr_swiper_wrapper .slide {}
+#wrap #design h2 .container #detail_swiper .bnr_swiper_wrapper .slide img {}
+/* ---------------------------end */
+#wrap #end {}
+#wrap #end p {}
+#wrap #end p em {}
+/* 공통 */
+#wrap h2 {
+    font-family:'Lexend', sans-serif; font-size:1.875rem; font-weight:700;
+    position:absolute; left:0; top:160px; text-align:right;
+}
+#wrap h2::after {
+    content:''; width:100%; height:1px; display:block; position:relative; top:10px;
+    transform-origin:left center; animation:line_ani 1.5s linear both;
+}
+
+@keyframes h1_ani {
+    0% {transform:translate(-50%, -50%); opacity:0;}
+    100% {transform:translate(-49%, -47%); opacity:1;}
+}
+@keyframes line_ani {
+    0% {transform:scaleX(0);}
+    100% {transform:scaleX(1);}
+}
