--- a/styles/index.css
+++ b/styles/index.css
@@ -198,6 +198,19 @@ header nav a:hover {font-weight:400;}
 }
 .popup_bg .popup img {width:100%;}
 
+/* -------------------------닥터포헤어 popup */
+.dr_popup_bg {
+    background-color:rgba(0,0,0,0.8);
+    position:fixed; left:0; top:0; z-index:800;
+    height:100vh; width:100%; padding:80px;
+    display:none;
+}
+.dr_popup_bg .dr_popup {
+    margin:0 auto; width:1000px;
+    height:80vh; overflow:auto;
+}
+.dr_popup_bg .dr_popup img {width:100%;}
+
 
 @keyframes h1_ani {
     0% {transform:translate(0, 0); opacity:0;}
