--- a/styles/index.css
+++ b/styles/index.css
@@ -1,9 +1,9 @@
 /* index.css */
-body {min-width:1920px; max-width:1920px;}
+body {min-width:1920px; max-width:1920px; margin:0 auto;}
 /* ---------------------------header */
 header {
     position:fixed; right:0; top:0;
-    z-index:900; width:100%; height:70px;
+    z-index:900; min-width:1920px; height:70px;
     padding:30px 250px;
 }
 header nav {display:flex; gap:32px; position:absolute; right:249px;}
